--- a/style.css
+++ b/style.css
@@ -87,6 +87,22 @@ p {
   }
 }
 
+.preloader {
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #F7F7F7;
+}
+
+.hide-preloader {
+  display: none;
+}
+
 .header-brand {
   -webkit-box-shadow: 0px 0px 1px #2C272E;
           box-shadow: 0px 0px 1px #2C272E;
@@ -111,10 +127,10 @@ p {
 }
 
 .brand {
-  font-family: "Caveat", cursive;
+  font-family: "Roboto Slab", serif;
   margin: 0;
   color: #FFCC1D;
-  letter-spacing: .1rem;
+  letter-spacing: .05rem;
   text-shadow: 1px 1px 1px #2C272E;
 }
 
@@ -124,8 +140,15 @@ p {
 }
 
 .nav-toggle,
-.close-nav {
+.close-nav,
+.modal-btn {
   font-size: 1rem;
+}
+
+.close-nav:hover,
+.modal-btn:hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
 }
 
 .open-bars {
@@ -195,10 +218,6 @@ p {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-}
-
-.close-nav {
-  color: #FF0000;
 }
 
 .navbar {
@@ -279,7 +298,8 @@ p {
 
 @media (min-width: 770px) {
   .nav-toggle,
-  .close-nav {
+  .close-nav,
+  .modal-btn {
     font-size: 1.3rem;
   }
   .aside-navbar,
@@ -506,6 +526,40 @@ p {
         grid-template-columns: 1fr 1fr 1fr;
     max-width: calc(900px + 2rem);
   }
+}
+
+.modal {
+  width: 100%;
+  height: 100vh;
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: #F7F7F7;
+  visibility: hidden;
+  opacity: 0;
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+}
+
+.modal h1 {
+  color: #0B4619;
+  text-align: center;
+  width: 90%;
+  margin: 0 auto;
+}
+
+.modal button {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+}
+
+.show-modal {
+  visibility: visible;
+  opacity: 1;
 }
 
 footer {
