--- a/style.scss
+++ b/style.scss
@@ -7,7 +7,7 @@
 }
 
 // fonts
-$ff-primary: 'Caveat', cursive;
+$ff-primary: 'Roboto Slab', serif;
 $ff-secondary: 'Athiti', sans-serif;
 $ff-tertiary: 'Source Sans Pro', sans-serif;
 
@@ -105,7 +105,20 @@ p {
 }
 
 // ===== GLOBAL ACCESS =====
-
+// ===== preloader
+.preloader {
+    display: grid;
+    place-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: $clr-white;
+}
+.hide-preloader {
+    display: none;
+}
 // ===== header
 
 .header-brand {
@@ -129,7 +142,7 @@ p {
     font-family: $ff-primary;
     margin: 0;
     color: $clr-yellow;
-    letter-spacing: .1rem;
+    letter-spacing: .05rem;
     text-shadow: 1px 1px 1px $clr-black;
 }
 .brand span {
@@ -138,8 +151,14 @@ p {
 }
 
 .nav-toggle,
-.close-nav {
+.close-nav,
+.modal-btn {
     font-size: 1rem;
+}
+
+.close-nav:hover,
+.modal-btn:hover {
+    transform: scale(1.2);
 }
 
 .open-bars {
@@ -192,10 +211,6 @@ p {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-}
-
-.close-nav {
-    color: #FF0000;
 }
 
 .navbar {
@@ -263,7 +278,8 @@ p {
 @media (min-width: 770px) {
 
     .nav-toggle,
-    .close-nav {
+    .close-nav,
+    .modal-btn {
     font-size: 1.3rem;
     }
 
@@ -477,7 +493,39 @@ p {
 
 }
 
-// ==================== FOOTER =====================\
+// ==================== MODAL =====================
+.modal {
+    width: 100%;
+    height: 100vh;
+    display: grid;
+    place-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: $clr-white;
+    visibility: hidden;
+    opacity: 0;
+    transition: all 0.4s ease;
+    & h1 {
+        color: $clr-dark--green;
+        text-align: center;
+        width: 90%;
+        margin: 0 auto;
+    }
+    & button {
+        position: absolute;
+        top: 1rem;
+        right: 1rem;
+        
+    }
+}
+
+.show-modal {
+    visibility: visible;
+    opacity: 1;
+}
+
+// ==================== FOOTER =====================
 footer {
     box-shadow: 0px 0px 1px $clr-black;
     max-width: 1440px;
